generation for several pages

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <style type="text/css"></style>
-    <script src="src/js/panel.js"></script>
   </head>
-  <body></body>
+  <body>
+  <script src="js/panel.js"></script>
+  </body>
 </html>
