--- a/src/panel.html
+++ b/src/panel.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="/src/css/index.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
     <div id="chromeExtensionReactApp"></div>
-    <script src="src/build/main.js"></script>
+    <script src="build/main.js"></script>
 </body>
 </html>
